--- a/Frontends/FreeCourse.Web/FreeCourse.Web.csproj
+++ b/Frontends/FreeCourse.Web/FreeCourse.Web.csproj
@@ -6,9 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityModel" Version="5.2.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.17.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Services\Catalog\FreeCourse.Services.Catalog\FreeCourse.Services.Catalog.csproj" />
     <ProjectReference Include="..\..\Shared\FreeCourse.Shared\FreeCourse.Shared.csproj" />
   </ItemGroup>
 
