--- a/Frontends/FreeCourse.Web/appsettings.json
+++ b/Frontends/FreeCourse.Web/appsettings.json
@@ -1,4 +1,22 @@
 {
+  "ServiceApiSettings": {
+    "IdentityBaseUri": "http://localhost:5001",
+    "GatewayBaseUri": "http://localhost:5000",
+    "PhotoStockUri": "http://localhost:5012",
+    "Catalog": {
+      "Path": "services/catalog/"
+    }
+  },
+  "ClientSettings": {
+    "WebClient": {
+      "ClientId": "WebMVCClient",
+      "ClientSecret": "secret"
+    },
+    "WebClientForUser": {
+      "ClientId": "WebMVCClientForUser",
+      "ClientSecret": "secret"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
